# scxctl

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: cli.rs  main.rs  modes.rs  scx_loader.rs
